--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
 			 	I have a Bachelor's degree in Information Management from the University of Ghana but I recently decided on a career switch after developing an interest in programming. Apart from practicing my recent love (front-end programming), my other hobbies include watching anime, reading novels, writing (on a personal blog and content writing) and listening to rap music. I am interested in clent side programming and I look forward to establishing myself as a fullstack frontend developer in the nearest future. I am a huge lover of dogs and I have two of them; Smart and Merlin.
 			 </p>
 			 	<hr class="hr">
+				<hr class="hr">
+			 	<hr>
+			 	<br>
+			 	<br>
+			 	<br>
+	
+		<form align="left">
+		<h2>HELLO, PLEASE LEAVE ME A MESSAGE</h2>
+		<p align="center"><i>Or email me at <a href="Deborahfinyang@gmail.com">deborahfinyang@gmail.com </a> <i></p>
+		<br>
+		<b><label>Full Name</label></b>
+		<br>
+		<input type="text" placeholder="Full Name" class="inputarea">
+		<br>
+		<br>
+	    <b><label>Email Address</label></b>
+	    <br>
+	    <input type="text" placeholder="Email Address" class="inputarea">
+	    <br>
+	    <br>
+	    <b><label>Message</label></b>
+	    <br>
+	    <textarea width="250px" height="400px" placeholder="Input message"></textarea> &nbsp &nbsp &nbsp &nbsp
+	    <button>SEND</button>
+        </form>
 </div>
 </body>
 </html>
