--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 			    <br>
 			    <b>Email:</b> deborahfinyang@gmail.com
 			    <br>
-			    <b>Address:</b> 52 Zone A, Apo Resettlemet, Abuja.
 			 </p>
 			<hr class="hr">
 			 <h2> Start.ng Internship Details</h2>
@@ -37,19 +36,17 @@
 			 <hr class="hr">
 			 <h2> About</h2>
 			 <p>
-				<b>Date of Birth:</b> 5th September, 1995.
+				<b>Date of Birth:</b> 5th September
 			    <br>
 			    <b>State of Origin:</b> AkwaIbom
 			    <br>
 			    <b>Hometown:</b> Etinan
 			    <br>
-			    <b>Occupation:</b> Youth Corper
-			    <br>
-			    <b>Address:</b> 52 Zone A, Apo Resettlemet, Abuja.
+			   
 			</p>
 			 <br>
 			 <p>
-			 	I have a Bachelor's degree in Information Management from the University of Ghana but I recently decided on a career switch after developing an interest in programming. Apart from practicing my recent love (front-end programming), my other hobbies include watching anime, reading novels, writing (on a personal blog and content writing) and listening to rap music. I am interested in clent side programming and I look forward to establishing myself as a fullstack frontend developer in the nearest future. I am a huge lover of dogs and I have two of them; Smart and Merlin.
+			  I recently decided on a career switch after developing an interest in programming. Apart from practicing my recent love (front-end programming), my other hobbies include watching anime, reading novels, writing (on a personal blog and content writing) and listening to rap music. I am interested in clent side programming and I look forward to establishing myself as a fullstack frontend developer in the nearest future. I am a huge lover of dogs and I have two of them; Smart and Merlin.
 			 </p>
 			 	<hr class="hr">
 				<hr class="hr">
