--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="box">
   <img src="mee.jpg" alt="my profile picture" class="box-img" align="center">
   <h1><b> DEBORAH INYANG</b></h1>
-<h3 align="center"><i>Front-end developer & Web Designer</i></h3>
+<h3 align="center"><i>Front-end developer & UI/UX Designer</i></h3>
 <br>
 <a href="https://twitter.com/The_inyang"> Follow me Twitter </a>
 <br>
